--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -56,6 +56,9 @@ a {text-decoration: none;}
     vertical-align: baseline;
 }
 
+.center{
+		margin: 0 auto;
+}
 .container {padding-right:15px;padding-left:15px;margin-right:auto;margin-left:auto}
   @media (min-width:768px){
 	.container{width:600px}
