--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,7 +23,7 @@ html {
 
 body {
 	font-family: "MontSerrat", Arial, Helvetica, sans-serif;
-	background:#F0F0F0;
+	background: #f0f0f0;
 	overflow-x: hidden;
 	cursor:default;
 	/* Non selezionabile */
