--- a/css/stili.css
+++ b/css/stili.css
@@ -23,7 +23,8 @@ Versione: 0.2
 					box-sizing: border-box;
 }
 html {
-	font-family: sans-serif;
+	font-family: Roboto,sans-serif;
+	background-color: #fafafa;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	-webkit-text-size-adjust: 100%;
 			-ms-text-size-adjust: 100%;
@@ -35,7 +36,7 @@ body {
 	font-size: 14px;
 	line-height: 1.42857143;
 	color: #333;
-	background-color: #fff;
+	background-color: #fafafa;
 }
 
 header,
@@ -56,6 +57,9 @@ b {
 }
 small {
 	font-size: 75%;
+}
+input:focus ~ .input-container{
+	border-bottom: 2px solid #1976D2;
 }
 
 /*========== 01. Material Design ==========*/
@@ -104,25 +108,25 @@ small {
 
 /*========== 01. Stili Globali ==========*/
 .container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
 }
 @media (min-width: 768px) {
-    .container {
-        width: 750px;
-    }
+	.container {
+		width: 750px;
+	}
 }
 @media (min-width: 992px) {
-    .container {
-        width: 970px;
-    }
+	.container {
+		width: 970px;
+	}
 }
 @media (min-width: 1200px) {
-    .container {
-        width: 1170px;
-    }
+	.container {
+		width: 1170px;
+	}
 }
 .left {
 	float: left;
@@ -142,6 +146,12 @@ small {
 	z-index: 1;
 	background-color: #000;
 	opacity: 0.33;
+}
+.input-container {
+	height: 50px;
+	border-bottom: 2px solid #e6e6e6;
+	padding: 0;
+	margin: 0 0 22px;
 }
 
 /*========== 02. Header ==========*/
@@ -198,6 +208,7 @@ header .etichetta.enlarged {
 	width: 64px;
 	margin: 8px 16px auto -12px;
 }
-
-
-
+/*========== 03. Header ==========*/
+#usc.focused{
+	border-bottom: 2px solid #1976D2;
+}
