--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,7 +1,9 @@
-/*=======================*/
+/*===================*/
+/*   SEZIONE FONTS   */
+/*===================*/
+
 /*    FAMIGLIA ROBOTO    */
-/*=======================*/
-@font-face {
+@font-face { /* Roboto-Thin */
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 100;
@@ -10,7 +12,7 @@
 			 url('/fonts/Roboto-Thin.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-@font-face {
+@font-face { /* Roboto-Light */
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
@@ -19,7 +21,7 @@
 			 url('/fonts/Roboto-Light.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-@font-face {
+@font-face { /* Roboto-Regular */
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
@@ -28,7 +30,7 @@
 			 url('/fonts/Roboto-Regular.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-@font-face {
+@font-face { /* Roboto-Medium */
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
@@ -37,7 +39,7 @@
 			 url('/fonts/Roboto-Medium.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-@font-face {
+@font-face { /* Roboto-Bold */
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
@@ -46,39 +48,37 @@
 			 url('/fonts/Roboto-Bold.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-@font-face {
+@font-face { /* Roboto-Mono */
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 400;
   src: local('Roboto Mono'),
-       local('RobotoMono-Regular'),
+       local('Roboto-Mono'),
 			 url('/fonts/Roboto-Mono.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-
-/*=============*/
 /*    ICONE    */
-/*=============*/
-@font-face {
+@font-face { /* Material-Icons */
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(https://localhost/MaterialIcons-Regular.eot); /* For IE6-8 */
   src: local('Material Icons'),
-       local('MaterialIcons-Regular'),
+       local('Material-Icons'),
        url('/fonts/MaterialIcons-Regular.woff2') format('woff2')
 }
 
+/*=============================*/
+/*   SEZIONE CLASSI DI STILE   */
+/*=============================*/
 
+/*    MATERIAL ICONS    */
 
-
-
-
+/* Stili Generali per le Icone */
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
+  font-size: 24px;
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -86,30 +86,27 @@
   word-wrap: normal;
   white-space: nowrap;
   direction: ltr;
-
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
   /* Support for Safari and Chrome. */
   text-rendering: optimizeLegibility;
-
   /* Support for Firefox. */
   -moz-osx-font-smoothing: grayscale;
-
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
 
-/* Rules for sizing the icon. */
+/* Ridimensionamento Icone */
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
 
-/* Rules for using icons as black on a light background. */
+/* Stili per sfondi chari */
 .material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
 .material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
 
-/* Rules for using icons as white on a dark background. */
+/* Stili per sfondi scuri */
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
 
