--- a/css/stili.css
+++ b/css/stili.css
@@ -40,7 +40,7 @@ body {
 }
 
 header,
-section,
+div .section,
 footer {
 	float: left;
 	width: 100%;
@@ -420,8 +420,9 @@ button.close {
 	border-bottom: 2px solid #e6e6e6;
 }
 .form-control:focus{
-   border-color: #66afe9;
+   border-color: #8f8fef;
 }
+
 .form-control::-moz-placeholder {
     color: #999;
     opacity: 1;
@@ -535,4 +536,171 @@ header .etichetta.enlarged {
 /*========== 04. Header ==========*/
 #usc.focused{
 	border-bottom: 2px solid #1976D2;
+}
+
+#page-mask {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+	z-index: 9;
+	display:none;
+  background-color: rgba(0,0,0,0.5);
+}
+
+
+
+
+.ui-datepicker-month,
+.ui-datepicker-year {
+	resize: none;
+	width: 40%;
+	height: 24px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	background-image: none;
+	outline: 0;
+	border: 0;
+	border-bottom: 2px solid #e6e6e6;
+	margin: 2px 8px;
+}
+.ui-datepicker-month {
+	text-align: right;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#ui-datepicker-div {
+	margin-left: -150px;
+}
+
+.ui-datepicker,
+.ui-datepicker-material-header {
+	font-family: 'Roboto';
+}
+.ui-datepicker-material-header { 
+	display: block;
+	background-color: #1E88E5;
+	color: white;
+	text-align: center;
+	width: 325px;
+}
+.ui-datepicker-material-header .ui-datepicker-material-day {
+	background-color: #1565C0;
+	padding: 10px;
+	font-size: 1rem; 
+}
+.ui-datepicker-material-header .ui-datepicker-material-date {
+	padding: 20px;
+}
+.ui-datepicker-material-header .ui-datepicker-material-date .ui-datepicker-material-month,
+.ui-datepicker-material-header .ui-datepicker-material-date .ui-datepicker-material-day-num,
+.ui-datepicker-material-header .ui-datepicker-material-date .ui-datepicker-material-year {
+	padding: 0px;
+}
+.ui-datepicker-material-header .ui-datepicker-material-date .ui-datepicker-material-month {
+	font-size: 2rem;
+	text-transform: uppercase;
+}
+.ui-datepicker-material-header .ui-datepicker-material-date .ui-datepicker-material-day-num { 
+	font-size: 4.5rem;
+}
+.ui-datepicker-material-header .ui-datepicker-material-date .ui-datepicker-material-year {
+	font-size: 1.8rem;
+	font-weight: 300;
+	color: rgba(255, 255, 255, 0.5);
+}
+.ui-datepicker {
+	padding: 0;
+	border: none;
+	box-shadow: 0 12px 36px 16px rgba(0, 0, 0, 0.24);
+	width: 325px;
+}
+.ui-corner-all {
+	border-radius: 0;
+}
+.ui-widget-header {
+	border: 0;
+}
+.ui-datepicker-header {
+	text-align: center;
+	background: white;
+	padding-bottom: 15px;
+	font-weight: 300;
+}
+.ui-datepicker-header .ui-datepicker-prev,
+.ui-datepicker-header .ui-datepicker-next,
+.ui-datepicker-header .ui-datepicker-title {
+	border: none;
+	outline: none;
+}
+.ui-datepicker-calendar .ui-state-default {
+	background: none;
+	border: none;
+	text-align: center;
+	height: 33px;
+	width: 33px;
+	line-height: 28px;
+}
+.ui-datepicker-calendar .ui-state-highlight {
+	color: #284B72;
+}
+.ui-datepicker-calendar .ui-state-highlight {
+	border-radius: 50%;
+	background-color: #BBDEFB;
+}
+.ui-datepicker-calendar .ui-state-active {
+	border-radius: 50%;
+	background-color: #0D47A1;
+	color: white;
+	box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15);
+}
+.ui-datepicker-calendar thead th {
+	color: #999999;
+	font-weight: 400;
+}
+.ui-datepicker-buttonpane {
+	border: none;
+}
+.ui-datepicker-buttonpane .ui-state-default {
+	background: white;
+	border: none;
+}
+.ui-datepicker-buttonpane .ui-datepicker-close,
+.ui-datepicker-buttonpane .ui-datepicker-current {
+	background: white;
+	color: #0D47A1;
+	text-transform: uppercase;
+	border: none;
+	opacity: 1;
+	font-weight: 700;
+	outline: none;
+}
+.ui-datepicker-buttonpane .ui-datepicker-close:hover,
+.ui-datepicker-buttonpane .ui-datepicker-current:hover {
+	font-weight:700;
+} 
+.ui-datepicker .ui-datepicker-buttonpane {
+	margin: 0px;
+}
+.ui-datepicker .ui-datepicker-buttonpane button {
+	margin: 0.5em;
 }
